--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,4 +1,5 @@
 .card-component {
+  position: relative;
   width: 280px;
 
   .header {
@@ -34,5 +35,12 @@
     border-radius: 50%;
     position: relative;
     bottom: -50px;
+  }
+
+  .delete-collab {
+    cursor: pointer;
+    position: absolute;
+    right: -10px;
+    top: -10px;
   }
 }
