--- a/src/components/Registration/Course/Course.scss
+++ b/src/components/Registration/Course/Course.scss
@@ -1,6 +1,7 @@
 .course-component {
   text-align: center;
   padding: 32px;
+  position: relative;
 
   h3 {
     font-size: 32px;
@@ -14,5 +15,11 @@
     justify-content: space-around;
     margin-top: 32px;
     flex-wrap: wrap;
+  }
+
+  .input-color {
+    position: absolute;
+    right: 50px;
+    top: 20px;
   }
 }
